// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Evidence urls EvidenceLink should return a plain value if unknown source 1`] = `
<DocumentFragment>
  &lt;Unknown source&gt;: rule_id
</DocumentFragment>
`;

exports[`Evidence urls EvidenceLink should return the correct external link JSX 1`] = `
<DocumentFragment>
  <a
    class="external-link"
    href="https://www.ensembl.org/id/rule_id"
    rel="noopener"
    target="_blank"
  >
    Ensembl: rule_id
    <test-file-stub
      data-testid="external-link-icon"
      width="12.5"
    />
  </a>
</DocumentFragment>
`;

exports[`Evidence urls EvidenceLink should return the correct internal link JSX 1`] = `
<DocumentFragment>
  <a
    href="/arba/rule_id"
  >
    ARBA: rule_id
  </a>
</DocumentFragment>
`;
